# md2pdf

./: .gitignore  Cargo.toml  LICENSE  package.json  pdf-style.toml  skills-lock.json
.agents/skills/pdf-design-structure/: SKILL.md
crates/api/: Cargo.toml
crates/api/src/: error.rs  handlers.rs  lib.rs  main.rs  models.rs  openapi.rs  routes.rs
crates/api/tests/: api.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/examples/: read_markdown.rs
crates/core/src/: ast.rs  document.rs  engine.rs  error.rs  layout.rs  lib.rs  parser.rs  style.rs
crates/core/tests/: markdown_parser.rs  markdown_pipeline.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs  pdf.rs
crates/renderer/tests/: pdf_renderer.rs
frontend/: .gitignore  astro.config.mjs  package-lock.json  package.json
frontend/src/components/: MarkdownToPDF.tsx
frontend/src/layouts/: Layout.astro
frontend/src/styles/: global.css
samples/markdown/: basic.md  code.md  formatting.md  iranet.md  lists.md  long-document.md  no-title.md
scripts/: read-markdown.sh
src/components/: MarkdownToPDF.tsx
src/layouts/: Layout.astro
src/pages/: index.astro
src/styles/: global.css
