[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/renderer",
    "crates/cli",
]

[workspace.dependencies]
comrak = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
minijinja = "2.0"
html-escape = "0.2"
insta = "1.40"
pretty_assertions = "1.4"
rstest = "0.23"
