[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/core",
    "crates/renderer",
    "crates/cli",
]

[workspace.dependencies]
axum = "0.7"
comrak = "0.29"
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
minijinja = "2.0"
html-escape = "0.2"
insta = "1.40"
pretty_assertions = "1.4"
rstest = "0.23"
